# winwing-xplane-plugin

./: .gitignore  BUILD.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  docker-build-all.sh  docker-build.sh  install.sh  macos_missing_includes.h  toolchain-mac.cmake  toolchain-win.cmake
Winwing.xcodeproj/: project.pbxproj
Winwing.xcodeproj/xcshareddata/xcschemes/: Debug (+ link debugger).xcscheme
src/: main.cpp
src/desktop/: ContentView.swift  DeviceModel.swift  FCUEfisControlView.swift  bridge.h  bridge.mm
src/include/: appstate.cpp  config.h
src/include/products/fcu-efis/: fcu-efis-aircraft-profile.h  product-fcu-efis.cpp  product-fcu-efis.h
src/include/products/fcu-efis/profiles/: laminar-fcu-efis-profile.cpp  toliss-fcu-efis-profile.cpp  toliss-fcu-efis-profile.h
src/include/products/fmc/: fmc-aircraft-profile.h  fmc-hardware-mapping.h  product-fmc.cpp  product-fmc.h
src/include/products/fmc/fonts/: font.cpp  font.h  md11-cdu.h
src/include/products/fmc/profiles/: rotatemd11-fmc-profile.cpp  rotatemd11-fmc-profile.h  toliss-fmc-profile.cpp
src/include/products/pap3-mcp/aircraft/: pap3_aircraft.h
src/include/products/pap3-mcp/aircraft/profiles/: ff777_profile.cpp  ff777_profile.h  profile_factory.cpp  rotatemd11_profile.cpp  rotatemd11_profile.h  zibo_profile.cpp  zibo_profile.h
src/include/products/pap3-mcp/device/: pap3_device.cpp  pap3_device.h  transport.cpp
src/include/products/pap3-mcp/lcd/: compose.cpp  compose.h  segments.cpp  segments.h
src/include/products/pap3-mcp/menu/: pap3_menu.cpp
src/include/products/ursa-minor-joystick/: product-ursa-minor-joystick.cpp
src/include/utils/: dataref.cpp
src/include/utils/usbdevice/: usbcontroller.h  usbcontroller_lin.cpp  usbcontroller_mac.cpp  usbcontroller_win.cpp  usbdevice.cpp  usbdevice.h  usbdevice_lin.cpp  usbdevice_mac.cpp  usbdevice_win.cpp
